add the correct pages

--- a/pages/Save-trees.html
+++ b/pages/Save-trees.html
@@ -27,7 +27,7 @@ Saving trees is our responsibility.
 Save Trees, Save Life.
 </p>
 
-<a href="index.html">⬅ Back to Home</a>
+<a href="../index.html">⬅️ Back to Home</a>
 
 </body>
 </html>
